4.3.1 Collection API Улучшения[#99319]