@@ -3,8 +3,8 @@ package sortuser;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.TreeSet;
 
 import static org.hamcrest.core.Is.is;
@@ -20,21 +20,20 @@ public class SortUserTest {
                             new User("On", 150),
                             new User("Roof", 100));
             TreeSet<User> result = users.sort(catalog);
-            TreeSet<User> expected = new TreeSet<>();
-            expected.add(new User("Roof", 100));
-            expected.add(new User("On", 150));
-            expected.add(new User("Karlan", 200));
+            TreeSet<User> expected = new TreeSet<>(Set.of(
+                    new User("Roof", 100),
+                    new User("On", 150),
+                    new User("Karlan", 200)));
             assertThat(result.toString(), is(expected.toString()));
         }
 
         @Test
         public void whenListSortByNameLength() {
             SortUser users = new SortUser();
-            List<User> catalog = new ArrayList<>(
-                    Arrays.asList(
-                            new User("Winnie-the-Poof", 95),
-                            new User("Bear", 95),
-                            new User("A.A.Milne", 150)));
+            List<User> catalog = new ArrayList<>(List.of(
+                    new User("Winnie-the-Poof", 95),
+                    new User("Bear", 95),
+                    new User("A.A.Milne", 150)));
             List<User> result = users.sortNameLength(catalog);
             List<User> expected = List.of(
                             new User("Bear", 95),
@@ -47,7 +46,7 @@ public class SortUserTest {
         public void whenSortByAllFields() {
             SortUser users = new SortUser();
             List<User> catalog = new ArrayList<>(
-                    Arrays.asList(
+                    List.of(
                             new User("Сергей", 25),
                             new User("Иван", 30),
                             new User("Сергей", 20),
